# A2A_MCP

./: .env  README.md  pyproject.toml  requirements.txt
MCP/Booking_MCP/: server.py
MCP/Booking_MCP/mcp_tools/: booking_tool.py
MCP/weather_MCP/: server.py
MCP/weather_MCP/mcp_tools/: weather_tool.py
Mounting/: mount_a2a_server.py  mount_mcp_servers.py
chatbot_ui/: streamlit_ui.py
client/: a2a_client.py  router.py
research_agent/: agent_executer.py  server.py
ticket_agent/: Ticket_agent_executor.py  ticket_server.py
weather_agent/: weather_Agent_executor.py  weather_Server.py
